--- a/page3.html
+++ b/page3.html
@@ -29,32 +29,24 @@
 </script>
 <script id="Cookiebot" src="../../consent.cookiebot.com/uc.js" data-cbid="9147fcf2-a466-4a5d-82ab-43e528833d80" data-blockingmode="auto"></script>
 <script src="js/c/responsive/vendor-151.js" data-cookieconsent="ignore"></script>
-<title>Old School  Hiscores</title>
+<title>Bap Head Hiscores</title>
 <meta name="keywords" content="MMORPG, free RPG games online, online multiplayer, role-playing, massively multiplayer games, mmo, RuneScape, Jagex" />
-<meta name="description" content="If you're a RuneScape veteran hungry for nostalgia, get stuck right in to Old School RuneScape. Sign up for membership and re-live the adventure." />
+<meta name="description" content="Welcome to the Bap Heads Clan Collection Log Hiscores page! This dedicated page proudly displays the clan Clog rankings and will be updated every sunday." />
 
-<link rel="icon" type="image/vnd.microsoft.icon" href="https://www.runescape.com/img/global/favicon.ico" />
-<link rel="SHORTCUT ICON" href="https://www.runescape.com/img/global/favicon.ico" />
+<link rel="icon" type="image/vnd.microsoft.icon" href="img/global/favicon.ico" />
+<link rel="SHORTCUT ICON" href="img/global/favicon.ico" />
 <link rel="apple-touch-icon" href="img/global/mobile.png">
 <meta property="fb:app_id" content="174823375888281" />
 
-<meta property="og:title" content="Old School  Hiscores" />
+<meta property="og:title" content="Bap Head Hiscores" />
 <meta property="og:type" content="website" />
-<meta property="og:site_name" content="Old School RuneScape" />
-<meta property="og:image" content="https://www.runescape.com/img/rsp777/social-share-fb.jpg?1" />
-<meta property="og:url" content="https://www.runescape.com" />
-<meta property="og:description" content="If you're a RuneScape veteran hungry for nostalgia, get stuck right in to Old School RuneScape. Sign up for membership and re-live the adventure." />
+<meta property="og:site_name" content="Bap Heads" />
+<meta property="og:image" content="img/rsp777/banner.gif" />
+<meta property="og:url" content="https://bapheads.github.io/Hiscores/" />
+<meta property="og:description" content="Welcome to the Bap Heads Clan Collection Log Hiscores page! This dedicated page proudly displays the clan Clog rankings and will be updated every sunday." />
 <meta name="google-site-verification" content="RFtGg-G07XweT7nQe032HocvnRPhJAsdZqrq4NX_Op8">
 <meta itemprop="name" content="RuneScape">
-<meta itemprop="description" content="If you're a RuneScape veteran hungry for nostalgia, get stuck right in to Old School RuneScape. Sign up for membership and re-live the adventure.">
-<meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:domain" content="Oldschool.RuneScape.com">
-<meta name="twitter:url" content="https://www.runescape.com">
-<meta name="twitter:title" content="Old School  Hiscores">
-<meta name="twitter:description" content="If you're a RuneScape veteran hungry for nostalgia, get stuck right in to Old School RuneScape. Sign up for membership and re-live the adventure.">
-<meta name="twitter:image:src" content="https://www.runescape.com/img/rsp777/social-share.jpg?1">
-<meta name="twitter:site" content="@OldSchoolRS">
-<meta name='google-site-verification' content='pUwl5KYHKSZ6tbbgsR2wYNv1kbVmsYral3iFmijHTWM' />
+<meta itemprop="description" content="Welcome to the Bap Heads Clan Collection Log Hiscores page! This dedicated page proudly displays the clan Clog rankings and will be updated every sunday.">
 <link href="css/rsp777_hiscore-119.css" rel="stylesheet" type="text/css" media="all">
 <style>
     
