--- a/page2.html
+++ b/page2.html
@@ -41,11 +41,11 @@
 <meta property="og:title" content="Bap Head Hiscores" />
 <meta property="og:type" content="website" />
 <meta property="og:site_name" content="Bap Heads" />
-<meta property="og:image" content="img/rsp777/banner.gif" />
+<meta property="og:image" content="img/rsp777/banner.png" />
 <meta property="og:url" content="https://bapheads.github.io/Hiscores/" />
 <meta property="og:description" content="Welcome to the Bap Heads Clan Collection Log Hiscores page! This dedicated page proudly displays the clan Clog rankings and will be updated every sunday." />
 <meta name="google-site-verification" content="RFtGg-G07XweT7nQe032HocvnRPhJAsdZqrq4NX_Op8">
-<meta itemprop="name" content="RuneScape">
+<meta itemprop="name" content="Bap Heads">
 <meta itemprop="description" content="Welcome to the Bap Heads Clan Collection Log Hiscores page! This dedicated page proudly displays the clan Clog rankings and will be updated every sunday.">
 <link href="css/rsp777_hiscore-119.css" rel="stylesheet" type="text/css" media="all">
 <style>
