--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <table>
                             <caption>
                                 <img class="miniimg" src="img/rsp777/blank.gif" />
-                                &nbsp; Collection Log Hiscores
+                                &nbsp; Clog Hiscores
                             </caption>
                             <thead>
                                 <tr>
