--- a/index.html
+++ b/index.html
@@ -19,69 +19,6 @@
     <meta itemprop="name" content="Bap Heads">
     <meta itemprop="description" content="Welcome to the Bap Heads Clan Collection Log Hiscores page! This dedicated page proudly displays the clan Clog rankings and will be updated every sunday.">
     <link href="css/rsp777_hiscore-119.css" rel="stylesheet" type="text/css" media="all">
-    
-    <!-- Additional CSS for layout adjustments -->
-    <style>
-        /* Stretching the images (blank.gif, headerHiscores, footerHiscores) */
-        #headerHiscores, #footerHiscores, .miniimg, img[src*="blank.gif"] {
-            width: 100%; /* Stretch to fill the container */
-            height: auto; /* Maintain aspect ratio */
-        }
-
-        /* Table styling for better spacing */
-        table {
-            width: 100%; /* Full width */
-            border-collapse: collapse; /* Collapse borders */
-            text-align: left; /* Left align the text */
-        }
-
-        th, td {
-            padding: 12px; /* Space inside cells */
-            text-align: left; /* Left align text in cells */
-            border-bottom: 1px solid #ddd; /* Border for row separation */
-        }
-
-        th {
-            background-color: #f2f2f2; /* Light gray background for header */
-            font-weight: bold;
-        }
-
-        /* Column widths */
-        th:nth-child(1), td:nth-child(1) {
-            width: 10%; /* Narrow column for Rank */
-        }
-
-        th:nth-child(2), td:nth-child(2) {
-            width: 50%; /* Wider column for Name */
-        }
-
-        th:nth-child(3), td:nth-child(3) {
-            width: 40%; /* Narrower column for Clogs */
-        }
-
-        /* Add some space between the table and the container */
-        .personal-hiscores__table {
-            margin-top: 20px;
-            margin-bottom: 20px;
-        }
-
-        /* Footer adjustments if you have footerHiscores */
-        #footerHiscores {
-            margin-top: 20px;
-        }
-
-        /* Responsive adjustments for smaller screens */
-        @media (max-width: 600px) {
-            th, td {
-                padding: 8px;
-                font-size: 14px;
-            }
-
-            table {
-                font-size: 12px;
-            }
-        }
-    </style>
 </head>
 
 <body id="body">
@@ -128,7 +65,167 @@
     <div id="loading" style="display: block;">Loading...</div>
 
     <script type="module">
-        // JavaScript as before...
+        // Import Firebase modules
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/10.1.0/firebase-app.js";
+        import { getFirestore, collection, doc, setDoc, getDocs } from "https://www.gstatic.com/firebasejs/10.1.0/firebase-firestore.js";
+
+        // Your Firebase configuration
+        const firebaseConfig = {
+            apiKey: "AIzaSyBelYqDi1YKJ3PWpbzDRsvIBVlaUDTXtqI",
+            authDomain: "clanhiscores.firebaseapp.com",
+            projectId: "clanhiscores",
+            storageBucket: "clanhiscores.firebasestorage.app",
+            messagingSenderId: "101248585475",
+            appId: "1:101248585475:web:a5e8a47276d226c22e2336"
+        };
+
+        // Initialize Firebase
+        const app = initializeApp(firebaseConfig);
+        const db = getFirestore(app);
+
+        const GROUP_ID = 5474; // Replace with your group ID
+        const METRIC = "collections_logged";
+        const PAGE_SIZE = 20; // Number of members per page
+        const RATE_LIMIT_DELAY = 70000; // 70 seconds in milliseconds
+
+        // Fetch data for a specific page
+        async function fetchPage(page) {
+            const url = `https://api.wiseoldman.net/v2/groups/${GROUP_ID}/hiscores?metric=${METRIC}&page=${page}&limit=${PAGE_SIZE}`;
+            console.log(`Fetching page ${page} from API...`);
+            const response = await fetch(url);
+            if (!response.ok) {
+                throw new Error(`HTTP error! Status: ${response.status}`);
+            }
+            const data = await response.json();
+            console.log(`Fetched page ${page}:`, data);
+            return data;
+        }
+
+        // Save data to Firestore with filtering for scores >= 500
+        async function saveToFirestore(data) {
+            const batch = [];
+
+            // Filter out entries where the score is less than 500
+            const filteredData = data.filter(entry => entry.data.score >= 500);
+            console.log("Filtered Data (score >= 500):", filteredData);
+
+            filteredData.forEach((entry) => {
+                const { rank, ...entryWithoutRank } = entry.data;
+                console.log("Saving valid entry:", entryWithoutRank);
+                const playerRef = doc(db, "clanHiscores", entry.player.username);
+                batch.push(setDoc(playerRef, { ...entry, data: entryWithoutRank }, { merge: true }));
+            });
+
+            await Promise.all(batch);
+            console.log("Data saved to Firestore!");
+        }
+
+        // Load data from Firestore and sort by score
+        async function loadFromFirestore() {
+            console.log("Loading data from Firestore...");
+            const querySnapshot = await getDocs(collection(db, "clanHiscores"));
+            const data = querySnapshot.docs.map(doc => doc.data());
+
+            // Sort by score (descending order)
+            data.sort((a, b) => b.data.score - a.data.score);
+
+            console.log("Loaded data from Firestore:", data);
+            return data;
+        }
+
+        // Display hiscores in the table
+        function displayHiscores(data) {
+            console.log("Displaying hiscores in table...");
+            const tableBody = document.getElementById("hiscores-table");
+            let tableRows = "";
+
+            data.forEach((entry, index) => {
+                const player = entry.player;
+                const scoreData = entry.data;
+
+                tableRows += `
+                    <tr>
+                        <td>${index + 1}</td>
+                        <td>${player.username}</td>
+                        <td>${scoreData.score}</td>
+                    </tr>
+                `;
+            });
+
+            tableBody.innerHTML = tableRows;
+        }
+
+        // Fetch new data and update Firestore
+        async function fetchAndUpdateHiscores() {
+            let allMembers = await loadFromFirestore();
+            let page = Math.floor(allMembers.length / PAGE_SIZE) + 1;
+            let hasMoreData = true;
+
+            while (hasMoreData) {
+                try {
+                    console.log(`Fetching page ${page}...`);
+                    const data = await fetchPage(page);
+                    if (data.length > 0) {
+                        allMembers = allMembers.concat(data);
+                        await saveToFirestore(data); // Update Firestore
+                        page++;
+                    } else {
+                        hasMoreData = false;
+                    }
+                } catch (error) {
+                    console.error(`Error fetching page ${page}:`, error);
+                    break;
+                }
+
+                // Respect the rate limiter
+                if (hasMoreData) {
+                    console.log(`Waiting ${RATE_LIMIT_DELAY / 1000} seconds before fetching the next page...`);
+                    await new Promise(resolve => setTimeout(resolve, RATE_LIMIT_DELAY));
+                }
+            }
+
+            return allMembers;
+        }
+
+        // Main function to load and display hiscores
+        async function init() {
+            try {
+                console.log("Initializing hiscores...");
+                const loadingElement = document.getElementById("loading");
+                if (loadingElement) loadingElement.style.display = "none";  // Hide loading
+
+                // Load existing data from Firestore
+                const storedData = await loadFromFirestore();
+                console.log("Stored data from Firestore:", storedData);
+                if (storedData.length > 0) {
+                    displayHiscores(storedData); // Display stored data immediately
+                }
+
+                // Fetch new data and update the table
+                const updatedData = await fetchAndUpdateHiscores();
+                console.log("Updated data:", updatedData);
+                displayHiscores(updatedData);
+
+            } catch (error) {
+                console.error("Error initializing hiscores:", error);
+                document.getElementById("hiscores-table").innerHTML = `
+                    <tr>
+                        <td colspan="4">Failed to load data. Please try again later.</td>
+                    </tr>
+                `;
+            } finally {
+                const loadingElement = document.getElementById("loading");
+                if (loadingElement && loadingElement.style.display !== "none") {
+                    console.log("Hiding loading message...");
+                    loadingElement.style.display = "none";  // Ensure loading is hidden
+                }
+            }
+        }
+
+        window.addEventListener('load', () => {
+            console.log('Page loaded, starting process...');
+            init();
+        });
     </script>
 </body>
 
