--- a/index.html
+++ b/index.html
@@ -19,6 +19,23 @@
     <meta itemprop="name" content="Bap Heads">
     <meta itemprop="description" content="Welcome to the Bap Heads Clan Collection Log Hiscores page! This dedicated page proudly displays the clan Clog rankings and will be updated every sunday.">
     <link href="css/rsp777_hiscore-119.css" rel="stylesheet" type="text/css" media="all">
+    <style>
+        body {
+            line-height: 1.6;
+            font-size: 16px;
+        }
+        table {
+            margin: 20px auto;
+            border-collapse: collapse;
+            width: 80%;
+            border: 1px solid #ddd;
+        }
+        table td, table th {
+            padding: 10px;
+            text-align: center;
+            border: 1px solid #ddd;
+        }
+    </style>
 </head>
 
 <body id="body">
